(library
  (name console_solo5)
  (public_name mirage-console-solo5)
  (libraries lwt cstruct mirage-console)
 (foreign_stubs
  (language c)
  (names solo5_console_stubs)))

(rule
 (target solo5_console_stubs.c)
 (deps solo5_console_stubs.solo5.c solo5_console_stubs.default.c)
 (action
  (copy solo5_console_stubs.%{context_name}.c %{target})))
